--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200..800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="stylenew.css">
-    <link rel="stylesheet" href="stylemed.css">
-
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylemq.css">
 </head>
 
 <body>
@@ -21,13 +19,14 @@
             <div class="col-12 col-sm-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6 bkground">
                 <nav>
                     <h4>Notifications <span class="three">3</span></h4>
-                            <p class="mark-as-read">Mark all as read</p>
+                    <p class="mark-as-read">Mark all as read</p>
                 </nav>
                 <div class="row">
                     <div
                         class="col-xxl-11 col-xl-11 col-lg-11 col-md-11 col-sm-11 col-11 notification-box notification-box-1">
                         <img src="NotificationPageAssets/avatar-mark-webber.webp" alt="">
-                        <p><b class="cur-point">Mark Webber</b> reacted to your recent post <b class="cur-point"> My first tournament today! </b> </p>
+                        <p><b class="cur-point">Mark Webber</b> reacted to your recent post <b class="cur-point"> My
+                                first tournament today! </b> </p>
                     </div>
                 </div>
                 <div class="row">
@@ -41,7 +40,8 @@
                     <div
                         class="col-xxl-11 col-xl-11 col-lg-11 col-md-11 col-sm-11 col-11 notification-box notification-box-3">
                         <img src="NotificationPageAssets/avatar-jacob-thompson.webp" alt="">
-                        <p><b class="cur-point">Jacob Thompson</b> has joined your group <b class="cur-point"> Chess Club </b> .</p>
+                        <p><b class="cur-point">Jacob Thompson</b> has joined your group <b class="cur-point"> Chess
+                                Club </b> .</p>
                     </div>
                 </div>
                 <div class="row">
@@ -69,7 +69,8 @@
                     <div
                         class="col-xxl-11 col-xl-11 col-lg-11 col-md-11 col-sm-11 col-11 notification-box notification-box-6">
                         <img src="NotificationPageAssets/avatar-nathan-peterson.webp" alt="">
-                        <p><b class="cur-point">Nathan Peterson</b> reacted to your recent post <b class="cur-point">5 end-game strategies to increase your
+                        <p><b class="cur-point">Nathan Peterson</b> reacted to your recent post <b class="cur-point">5
+                                end-game strategies to increase your
                                 win rate </b></p>
                     </div>
                 </div>
